--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -72,9 +72,10 @@
                                 که شما تکنیک‌های مورد نیاز آن را در حساب کاربری‌تان ثبت کرده باشید.
                                 برای افزودن یک تکنیک به حساب کاربری خود، بر روی دکمه
                             </p>
-                            <span class="disable-success-btn">
-                                    <span>افزودن تکنیک</span>
-                                </span>
+                            <span class="disable-border-button">
+                                    <i class="fas fa-plus"></i>
+                                    <span>افزودن تکنیک جدید</span>
+                            </span>
                             <p>
                                 در گوشه بالا سمت چپ کلیک کنید.
                             </p>
