--- a/researcher/templates/researcher/layouts/technique_review_request.html
+++ b/researcher/templates/researcher/layouts/technique_review_request.html
@@ -7,7 +7,7 @@
             <form enctype="multipart/form-data" method="post" url="{% url 'researcher:technique-review' %}" id="technique_review">
                 {% csrf_token %}
                 <input type="text" name="technique_name" id="technique_name" hidden>
-                <div class="row">
+                <div class="row mbottom-lg-25">
                     <div class="col-lg-12">
                         <label for="request-body">توضیحات</label>
                         <textarea dir="rtl" rows="5" class="w-100" id="request-body" name="request_body"></textarea>
@@ -15,8 +15,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 text-right">
-                        <div class="confirmation">
-                            <span class="title">نحوه ارتقا نمره</span>
+                        <span class="section-title">نحوه ارتقا نمره</span>
+                        <div class="confirmation section">
                             <div class="radio-group row">
                                 <div class="review-request-method"></div>
                                 <div class="form-group col-lg-4 col-md-4">
