--- a/static/css/style.css
+++ b/static/css/style.css
@@ -604,7 +604,7 @@ a:hover, a:focus {
 
 input, textarea, select, div.tagsinput {
     background-color: #fefefe;
-    border: 1px solid #bdbdbd85;
+    border: 1px solid #bdbdbd;
     color: #8d8d8d;
     border-radius: 5px;
     margin-top: 20px;
@@ -1899,6 +1899,7 @@ ul.fancytree-container {
     border: none;
     background-color: inherit;
     font-family: iranyekan, serif;
+    margin-bottom: 0 !important;
 }
 
 ul.fancytree-container ul {
@@ -2347,17 +2348,14 @@ div.no-project > img.icon {
     transform: translate(-50%, -50%);
 }
 
-div.no-project > span.disable-success-btn {
-    border: none;
-    outline: none;
-    padding: 5px 15px;
-    text-align: center;
-    min-width: 100px;
-    height: auto;
-    margin-top: 0 !important;
+div.no-project > span.disable-border-button {
+    border: 1px solid #3CCD1C;
+    color: #3CCD1C;
+    background-color: #ffffff;
+    -webkit-border-radius: 0.25em;
+    -moz-border-radius: 0.25em;
     border-radius: 0.25em;
-    background-color: #89E076;
-    color: #ffffff !important;
+    padding: 5px 10px;
 }
 
 .aparat-ico {
