active trach icon in userinfo page

--- a/expert/templates/expert/layouts/research_form.html
+++ b/expert/templates/expert/layouts/research_form.html
@@ -12,7 +12,7 @@
                         <div class='row'>
                             <div class='col-lg-12'>
                                 <label for='subject'>عنوان طرح پژوهشی</label>
-                                {{ research_form.research_title|attr:"id:research_title"|attr:"class:w-100" }}
+                                {{ research_form.research_title|attr:"id:subject"|attr:"class:w-100" }}
                             </div>
                         </div>
                         <div class="row">
